Fixed issue with button collapsing on mobile

--- a/static/css/news.css
+++ b/static/css/news.css
@@ -384,9 +384,10 @@ p {
 .emoji-button {
     background-color: transparent;
     padding: 0;
+    margin: 0;
     border-radius: 999px;
-    width: 100%;
-    height: 100%;
+    min-width: 40px;
+    min-height: 40px;
     cursor: pointer;
     font-size: 24px;
 }
@@ -427,7 +428,7 @@ p {
 .emoji-wrapper {
   position: absolute;
   z-index: 1000;
-  top: 60px;
+  top: 85px;
   left: 280px;
   background-color: #1a1a1a;
   border: 1px solid #444;
@@ -442,7 +443,7 @@ p {
     max-height: 300px;
     min-width: 360px;
     z-index: 1000;
-    top: 60px;
+    top: 80px;
     left: 340px;
     overflow-y: auto;
     display: flex;
